--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -2,4 +2,9 @@
 @*@{
     Layout = "_Layout";
 }*@
+
+@for(int i=0;i< Model.listGroups.Count;i++ )
+{
+<h1>@Model.listGroups[i].Name</h1>
+}
 <h1>index</h1>
