--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -2,4 +2,16 @@
 @*@{
     Layout = "_Layout";
 }*@
-<h1>index</h1>
+<div class="flex menuBlock">
+    <div class="leftMenuBlock">
+        <ul class="menuUlStyle">
+            <li class="menuLiStyle menuText"><a class="aStyle" href=""><span class="yellowText">Me</span><span class="orangeText">nu</span></a></li>
+        </ul>
+    </div>
+    <div class="rightMenuBlock">
+        <ul class="menuUlStyle">
+            <li class="menuLiStyle menuText"><a class="aStyle" href=""><span class="orangeText">Lo</span><span class="yellowText">g</span><span class="blueText">in</span></a></li>
+        </ul>
+    </div>
+</div>
+<div class="anderMenuLine"></div>
