--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -4,8 +4,10 @@
 *@
 @{
 }
-@for (int i = 0; i < Model.listTasks.Count; i++)
-{
-    <h3>@Model.listTasks[i].Id</h3>
-    <h4>@Model.listTasks[i].Name</h4>
-}
+<table>
+    @for (int i = 0; i < Model.listTasks.Count; i++)
+    {
+        <h3>@Model.listTasks[i].Id</h3>
+        <h4>@Model.listTasks[i].Name</h4>
+    }
+</table>
