--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -5,8 +5,17 @@
 @{
 }
 @Model.task.Id
-<br/>
+<br />
 <p>
-    Name: 
+    Name:
     @Model.task.Name
+</p>
+<p>
+    Type:
+    @Model.task.Type
+</p>
+
+<p>
+    Description:
+    @Model.task.Description
 </p>
