--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -7,7 +7,11 @@
 <table>
     @for (int i = 0; i < Model.listTasks.Count; i++)
     {
-        <h3>@Model.listTasks[i].Id</h3>
-        <h4>@Model.listTasks[i].Name</h4>
+    <tr>
+        <td>@Model.listTasks[i].Id</td>
+        <td>@Model.listTasks[i].Name</td>
+        <td>@Model.listTasks[i].Description</td>
+        <td><a href="~/Index/Task/@Model.listTasks[i].Id">link</a></td>
+    </tr>
     }
 </table>
