Autoresation/registration done(maybe)

--- a/Classroom/Views/RegAut/Autoresation.cshtml
+++ b/Classroom/Views/RegAut/Autoresation.cshtml
@@ -10,6 +10,6 @@
 <p></p>
 <input type="password" name="Password" placeholder="Password">
 <input type="submit" value="Ввійти">
-<h5 style="text-align: center;"><a href="#" style="text-decoration: none; color: #707981;">Зареєструватися</a></h5>
+<h5 style="text-align: center;"><a href="/RegAut/Registration" style="text-decoration: none; color: #707981;">Зареєструватися</a></h5>
 </div>
 </form>
