--- a/Classroom/Views/RegAut/Registration.cshtml
+++ b/Classroom/Views/RegAut/Registration.cshtml
@@ -1,14 +1,25 @@
-﻿<form class="decor">
+﻿<a href="/RegAut/Autoresation">back</a>
+<form class="decor" action="/RegAut/RegistrationSave" method="post">
 <div class="form-left-decoration"></div>
 <div class="form-right-decoration"></div>
 <div class="circle"></div>
 <div class="form-inner">
-<h3 style="text-align: center;">Авторизація</h3>
-<br></br>
-<input type="text" name="Username" placeholder="Username">
-<p></p>
-<p></p>
-<input type="password" name="Password" placeholder="Password">
-<input type="submit" value="Зареєструватися">
+    <h3 style="text-align: center;">Регістрація</h3>
+    <br></br>
+    <input type="text" name="name" placeholder="Username">
+    <p></p>
+    <p></p>
+    <input type="password" name="password" placeholder="Password">
+    <p></p>
+    <p></p>
+    <input type="email" name="email" placeholder="email">
+    <p></p>
+    <p></p>
+    <input type="text" name="img" placeholder="img">
+    <p></p>
+    <p></p>
+    <input type="text" name="description" placeholder="description">
+
+    <input type="submit" value="Зареєструватися">
 </div>
 </form>
