--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -10,16 +10,30 @@
     </div>
     <div class="rightMenuBlock">
         <ul class="menuUlStyle">
-            <li class="menuLiStyle menuText"><a class="aStyle" href=""><span class="orangeText">Lo</span><span class="yellowText">g</span><span class="blueText">in</span></a></li>
+            @if ((bool)ViewData["joined"] == false)
+            {
+                <li class="menuLiStyle menuText"><a class="aStyle" href="~/RegAut/Autoresation"><span class="orangeText">Lo</span><span class="yellowText">g</span><span class="blueText">in</span></a></li>
+            }
+            else
+            {
+                <li class="menuLiStyle menuText"><a class="aStyle" href="~/RegAut/Exit"><span class="orangeText">Lo</span><span class="yellowText">g</span><span class="blueText">in</span><span class="orangeText"> out</span></a></li>
+            }
+
         </ul>
     </div>
 </div>
 <div class="anderMenuLine"></div>
 
+@if ((bool)ViewData["joined"] == true)
+{
 <table>
     @for (int i = 0; i < Model.listGroups.Count; i++)
     {
         <tr><td>@Model.listGroups[i].Id</td><td>@Model.listGroups[i].Name</td><td><a href="~/Index/TasksInGroup/@Model.listGroups[i].Id">link</a></td></tr>
     }
 </table>
-<h1>index</h1>
+}
+else
+{
+    <p>Must Join <a href="~/RegAut/Autoresation">link</a></p>
+}
