--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -1,8 +1,6 @@
 ﻿@model Classroom.Models.Index.TaskModel;
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
 @{
+    Layout = "_Layout";
 }
 @Model.task.Id
 <br />
