--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Classroom.Models.Index.GroupModel;
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
 @{
+    Layout = "_Layout";
 }
+<h4><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Peoples</a></h4>
 <table>
     @for (int i = 0; i < Model.listTasks.Count; i++)
     {
