--- a/Classroom/Views/Index/Reaply.cshtml
+++ b/Classroom/Views/Index/Reaply.cshtml
@@ -1,5 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Classroom.Models.Index.ReaplyModel;
+
 @{
+    Layout = "_Layout";
 }
+
+
+<form action="~/Index/ReaplySave" method="post">
+    <input type="hidden" name="id" value="@Model.currentId" />
+    <textarea name="description"></textarea>
+    @*add sending file*@
+    <input type="submit" value="submith"/>
+</form>
