--- a/Classroom/Views/Index/PeopleInGroup.cshtml
+++ b/Classroom/Views/Index/PeopleInGroup.cshtml
@@ -4,13 +4,24 @@
     Layout = "_Layout";
 }
 
-<h4><a href="~/Index/TasksInGroup/@ViewData["currentId"]">Tasks</a></h4>
-<h4>Owner: @Model.owner.Name</h4>
-<ul>
-    @for (int i = 0; i < Model.members.Count; i++)
-    {
-    <li>
-        @Model.members[i].Name
-    </li>
-   }
-</ul>
+
+@if ((bool)ViewData["joined"] != false)
+{
+    <h4><a href="~/Index/TasksInGroup/@ViewData["currentId"]">Tasks</a></h4>
+    <h4>Owner: @Model.owner.Name</h4>
+    <ul>
+        @for (int i = 0; i < Model.members.Count; i++)
+        {
+            <li>
+                @Model.members[i].Name
+            </li>
+        }
+    </ul>
+}
+else
+{
+    <p>Must Join <a href="~/RegAut/Autoresation">link</a></p>
+}
+
+
+
