--- a/Classroom/Views/Index/Task.cshtml
+++ b/Classroom/Views/Index/Task.cshtml
@@ -2,28 +2,37 @@
 @{
     Layout = "_Layout";
 }
-@Model.task.Id
-<br />
-<p>
-    Name:
-    @Model.task.Name
-</p>
-<p>
-    Type:
-    @Model.task.Type
-</p>
 
-<p>
-    Description:
-    @Model.task.Description
-</p>
 
-<a href="~/Index/Reaply/@Model.task.Id">Write reaplyes</a>
+@if ((bool)ViewData["joined"] != false)
+{
+    @Model.task.Id
+    <br />
+    <p>
+        Name:
+        @Model.task.Name
+    </p>
+    <p>
+        Type:
+        @Model.task.Type
+    </p>
 
-<h4>My reaplyes</h4>
-<ul>
-    @foreach (Classroom.Reaply r in Model.reaplies)
-    {
-        <li>@r.Id: @r.Description <a href="~/Index/ReaplyDelete/@r.Id">(delete)</a></li>
-    }
-</ul>
+    <p>
+        Description:
+        @Model.task.Description
+    </p>
+
+    <a href="~/Index/Reaply/@Model.task.Id">Write reaplyes</a>
+
+    <h4>My reaplyes</h4>
+    <ul>
+        @foreach (Classroom.Reaply r in Model.reaplies)
+        {
+            <li>@r.Id: @r.Description <a href="~/Index/ReaplyDelete/@r.Id">(delete)</a></li>
+        }
+    </ul>
+}
+else
+{
+    <p>Must Join <a href="~/RegAut/Autoresation">link</a></p>
+}
