--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -3,15 +3,23 @@
 @{
     Layout = "_Layout";
 }
-<h4><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Peoples</a></h4>
-<table>
-    @for (int i = 0; i < Model.listTasks.Count; i++)
-    {
-    <tr>
-        <td>@Model.listTasks[i].Id</td>
-        <td>@Model.listTasks[i].Name</td>
-        <td>@Model.listTasks[i].Description</td>
-        <td><a href="~/Index/Task/@Model.listTasks[i].Id">link</a></td>
-    </tr>
-    }
-</table>
+
+@if ((bool)ViewData["joined"] != false)
+{
+    <h4><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Peoples</a></h4>
+    <table>
+        @for (int i = 0; i < Model.listTasks.Count; i++)
+        {
+            <tr>
+                <td>@Model.listTasks[i].Id</td>
+                <td>@Model.listTasks[i].Name</td>
+                <td>@Model.listTasks[i].Description</td>
+                <td><a href="~/Index/Task/@Model.listTasks[i].Id">link</a></td>
+            </tr>
+        }
+    </table>
+}
+else
+{
+    <p>Must Join <a href="~/RegAut/Autoresation">link</a></p>
+}
