--- a/Classroom/Views/Index/CreateTask.cshtml
+++ b/Classroom/Views/Index/CreateTask.cshtml
@@ -6,7 +6,7 @@
     <input type="hidden" name="id" value="@Model.idGroup" />
     Title: <input type="text" name="title" /><br />
     Description: <input type="text" name="description" /><br />
-    File: <input type="file" name="file" /><br />
+    File: <input type="file" name="uploadedFile" /><br />
     Type: <select name="type">
         <option value="task">task</option>
         <option value="message">message</option>
