--- a/Classroom/Views/Index/PeopleInGroup.cshtml
+++ b/Classroom/Views/Index/PeopleInGroup.cshtml
@@ -7,16 +7,38 @@
 
 @if ((bool)ViewData["joined"] != false)
 {
-    <h4><a href="~/Index/TasksInGroup/@ViewData["currentId"]">Tasks</a></h4>
-    <h4>Owner: @Model.owner.Name</h4>
-    <ul>
-        @for (int i = 0; i < Model.members.Count; i++)
-        {
-            <li>
-                @Model.members[i].Name
-            </li>
-        }
-    </ul>
+    @if ((bool)ViewData["owned"])
+    {
+        <h4><a href="~/Index/TasksInGroup/@ViewData["currentId"]">Tasks</a></h4>
+        <h4>Owner: @Model.owner.Name</h4>
+        <ul>
+            @for (int i = 0; i < Model.members.Count; i++)
+            {
+                <li>
+                    @Model.members[i].Name
+                    <form method="post" action="~/Index/DeletePeopleInGroup">
+                        <input type="hidden" name="userId" value="@Model.members[i].Id" />
+                        <input type="hidden" name="groupId" value="@ViewData["currentId"]" />
+                        <input type="submit" value="delete" />
+                    </form>
+                </li>
+            }
+        </ul>
+    }
+    else
+    {
+        <h4><a href="~/Index/TasksInGroup/@ViewData["currentId"]">Tasks</a></h4>
+        <h4>Owner: @Model.owner.Name</h4>
+        <ul>
+            @for (int i = 0; i < Model.members.Count; i++)
+            {
+                <li>
+                    @Model.members[i].Name
+                </li>
+            }
+        </ul>
+    }
+
 }
 else
 {
