autoresation/registration pages update

--- a/Classroom/Views/RegAut/Autoresation.cshtml
+++ b/Classroom/Views/RegAut/Autoresation.cshtml
@@ -1,15 +1,17 @@
 ﻿<form class="decor" method="post" action="/RegAut/AutoresationSave">
-<div class="form-left-decoration"></div>
-<div class="form-right-decoration"></div>
-<div class="circle"></div>
-<div class="form-inner">
-<h3 style="text-align: center;">Авторизація</h3>
-<br></br>
-<input type="text" name="Username" placeholder="Username">
-<p></p>
-<p></p>
-<input type="password" name="Password" placeholder="Password">
-<input type="submit" value="Ввійти">
-<h5 style="text-align: center;"><a href="/RegAut/Registration" style="text-decoration: none; color: #707981;">Зареєструватися</a></h5>
-</div>
+    <div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner centerText">
+        <h3 style="text-align: center;">Авторизація</h3>
+        <br />
+        <label>Логін</label>
+        <input type="text" name="Username" placeholder="Username">
+        <label>Пароль</label>
+        <input type="password" name="Password" placeholder="Password">
+        <input type="submit" value="Ввійти">
+        <br />
+        <p>Не зареєстрований?</p>
+        <h5 style="text-align: center;"><a href="/RegAut/Registration" style="text-decoration: none; color: #707981; border-bottom:1px solid red">Зареєструватися</a></h5>
+    </div>
 </form>
