--- a/Classroom/Views/RegAut/Registration.cshtml
+++ b/Classroom/Views/RegAut/Registration.cshtml
@@ -1,25 +1,26 @@
 ﻿<a href="/RegAut/Autoresation">back</a>
 <form class="decor" action="/RegAut/RegistrationSave" method="post">
-<div class="form-left-decoration"></div>
-<div class="form-right-decoration"></div>
-<div class="circle"></div>
-<div class="form-inner">
-    <h3 style="text-align: center;">Регістрація</h3>
-    <br></br>
-    <input type="text" name="name" placeholder="Username">
-    <p></p>
-    <p></p>
-    <input type="password" name="password" placeholder="Password">
-    <p></p>
-    <p></p>
-    <input type="email" name="email" placeholder="email">
-    <p></p>
-    <p></p>
-    <input type="text" name="img" placeholder="img">
-    <p></p>
-    <p></p>
-    <input type="text" name="description" placeholder="description">
+    <div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner centerText">
+        <h3 style="text-align: center;">Реєстрація</h3>
+        <br />
 
-    <input type="submit" value="Зареєструватися">
-</div>
+        <label>Логін</label>
+        <input type="text" name="name" placeholder="Username">
+
+        <label>Пароль</label>
+        <input type="password" name="password" placeholder="Password">
+
+        <label>Електронна адреса</label>
+        <input type="email" name="email" placeholder="email">
+
+        <label>Картинка</label>
+        <input type="text" name="img" placeholder="img">
+
+        <label>Опис</label>
+        <input type="text" name="description" placeholder="description">
+        <input type="submit" value="Зареєструватися">
+    </div>
 </form>
