--- a/Classroom/Views/Shared/_Layout.cshtml
+++ b/Classroom/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>View</title>
     <link rel="stylesheet" href="/css/StyleSheet.css">
+    <link rel="stylesheet" href="/css/site.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
