--- a/Classroom/wwwroot/css/StyleSheet.scss
+++ b/Classroom/wwwroot/css/StyleSheet.scss
@@ -38,7 +38,10 @@
 
 .flex{
     display:flex;
-    justify-content:space-between;
+}
+
+.spaceBetween {
+    justify-content: space-between;
 }
 
 .menuBlock{
@@ -51,6 +54,8 @@
 
     .menuLiStyle {
         list-style-type: none;
+        margin-left:13px;
+        margin-right:13px;
     }
 
     .aStyle {
