--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -17,6 +17,7 @@
             else
             {
                 <li class="menuLiStyle menuText"><a class="aStyle" href="~/RegAut/Exit"><span class="orangeText">Lo</span><span class="yellowText">g</span><span class="blueText">in</span><span class="orangeText"> out</span></a></li>
+                <li class="menuLiStyle menuText"><a href="~/UserProfile/">profile</a></li>
             }
 
         </ul>
