--- a/Classroom/Views/UserProfile/Index.cshtml
+++ b/Classroom/Views/UserProfile/Index.cshtml
@@ -24,7 +24,7 @@
         <input type="file" name="img" value="@Model.user.Password" />
         <img width="150px" height="150px" src="~/profilePhoto/@{ @Model.user.Id}.jpg" />
 
-        <input type="submit" value="Ввійти">
+        <input type="submit" value="Змінити">
 
     </div>
 </form>
