--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -27,7 +27,7 @@
 
 @if ((bool)ViewData["joined"] != false)
 {
-    <h3>My Groups</h3>
+    <h3 class="centerText">My Groups</h3>
 
         @foreach (Classroom.Group item in Model.listMyGroups)
         {
