--- a/Classroom/Views/Shared/_Layout.cshtml
+++ b/Classroom/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <title>View</title>
     <link rel="stylesheet" href="/css/StyleSheet.css">
     <link rel="stylesheet" href="/css/site.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
