--- a/Classroom/wwwroot/css/StyleSheet.scss
+++ b/Classroom/wwwroot/css/StyleSheet.scss
@@ -74,6 +74,38 @@
 }
 
 
+.deleteButton {
+    color: red;
+}
+
+.deleteButton span {
+    font-size: 1.4em;
+}
+
+.margin-right13px {
+    margin-right: 13px;
+}
+
+.margin-left13px {
+    margin-left: 13px;
+}
+
+.linksStyle {
+    text-decoration: none;
+    color: white;
+}
+
+.button {
+    height: 30px;
+    width: 200px;
+    background: #fc692a;
+    border-bottom: 4px solid #db541a;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    font-size: 1em;
+}
+
 
 
 
