--- a/Classroom/wwwroot/css/StyleSheet.css
+++ b/Classroom/wwwroot/css/StyleSheet.css
@@ -31,8 +31,20 @@
 .flex {
   display: flex; }
 
+.spaceCenter {
+  justify-content: center; }
+
 .spaceBetween {
   justify-content: space-between; }
+
+.whiteSpace {
+  background-color: white;
+  width: 60%;
+  border-radius: 20px;
+  margin: 0 auto; }
+
+.centerBlock {
+  margin: 0 auto; }
 
 .menuBlock {
   height: 50px; }
@@ -40,16 +52,16 @@
 .menuUlStyle {
   margin: 0px;
   padding: 0px; }
-  .menuUlStyle .menuLiStyle {
-    list-style-type: none;
-    margin-left: 13px;
-    margin-right: 13px; }
-  .menuUlStyle .aStyle {
-    text-decoration: none; }
+
+.menuUlStyle .menuLiStyle {
+  list-style-type: none; }
+
+.menuUlStyle .aStyle {
+  text-decoration: none; }
 
 .anderMenuLine {
   width: 100%;
-  border: 1px solid grey; }
+  border: 1px solid #db541a; }
 
 .menuText {
   font-size: 1.4em;
@@ -64,6 +76,12 @@
 .margin-right13px {
   margin-right: 13px; }
 
+.margin-right30px {
+  margin-right: 30px; }
+
+.margin-left30px {
+  margin-left: 30px; }
+
 .margin-left13px {
   margin-left: 13px; }
 
@@ -74,6 +92,25 @@
 .button {
   height: 30px;
   width: 200px;
+  background: #fc692a;
+  border-bottom: 4px solid #db541a;
+  border-radius: 5px;
+  text-align: center;
+  color: white;
+  font-size: 1em; }
+
+.button2 {
+  height: 40px;
+  background: #fac564;
+  border-bottom: 4px solid #e6b800;
+  border-radius: 5px;
+  text-align: center;
+  color: white;
+  font-size: 1em; }
+
+.downButton {
+  height: 30px;
+  width: 100%;
   background: #fc692a;
   border-bottom: 4px solid #db541a;
   border-radius: 5px;
