--- a/Classroom/wwwroot/css/StyleSheet.scss
+++ b/Classroom/wwwroot/css/StyleSheet.scss
@@ -1,78 +1,93 @@
 ﻿body {
     font-family: 'Noto Sans Mono', monospace;
-    margin:0px;
-    padding:0px;
+    margin: 0px;
+    padding: 0px;
 }
-.centerText{
-    text-align:center;
+
+.centerText {
+    text-align: center;
 }
 
 .logoBackground {
-    background-color:#fac564;
+    background-color: #fac564;
 }
 
-.logoBlock{
-    height:100px;
+.logoBlock {
+    height: 100px;
 }
 
-.logoText{
-    font-size:2em;
-    font-weight:600;
+.logoText {
+    font-size: 2em;
+    font-weight: 600;
 }
 
 .logoTextBlock {
     padding-top: 25px;
 }
 
-.blueText{
-    color:blue;
+.blueText {
+    color: blue;
 }
 
-.yellowText{
-    color:yellowgreen;
+.yellowText {
+    color: yellowgreen;
 }
 
-.orangeText{
-    color:orangered;
+.orangeText {
+    color: orangered;
 }
 
-.flex{
-    display:flex;
+.flex {
+    display: flex;
+}
+
+.spaceCenter {
+    justify-content: center;
 }
 
 .spaceBetween {
     justify-content: space-between;
 }
 
-.menuBlock{
-    height:50px;
+.whiteSpace {
+    background-color: white;
+    width: 60%;
+    border-radius: 20px;
+    margin: 0 auto;
+}
+
+
+.centerBlock {
+    margin: 0 auto;
+}
+
+
+.menuBlock {
+    height: 50px;
 }
 
 .menuUlStyle {
     margin: 0px;
     padding: 0px;
-
-    .menuLiStyle {
-        list-style-type: none;
-        margin-left:13px;
-        margin-right:13px;
-    }
-
-    .aStyle {
-        text-decoration: none;
-    }
 }
 
-.anderMenuLine{
-    width:100%;
-    border:1px solid grey;
+.menuUlStyle .menuLiStyle {
+    list-style-type: none;
 }
 
-.menuText{
-    font-size:1.4em;
-    font-weight:300;
+.menuUlStyle .aStyle {
+    text-decoration: none;
 }
 
+.anderMenuLine {
+    width: 100%;
+    border: 1px solid #db541a;
+}
+
+.menuText {
+    font-size: 1.4em;
+    font-weight: 300;
+}
 
 .deleteButton {
     color: red;
@@ -84,6 +99,14 @@
 
 .margin-right13px {
     margin-right: 13px;
+}
+
+.margin-right30px {
+    margin-right: 30px;
+}
+
+.margin-left30px {
+    margin-left: 30px;
 }
 
 .margin-left13px {
@@ -106,8 +129,23 @@
     font-size: 1em;
 }
 
+.button2 {
+    height: 40px;
+    background: #fac564;
+    border-bottom: 4px solid #e6b800;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    font-size: 1em;
+}
 
-
-
-
-
+.downButton {
+    height: 30px;
+    width: 100%;
+    background: #fc692a;
+    border-bottom: 4px solid #db541a;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    font-size: 1em;
+}
