--- a/Classroom/Views/GroupC/Create.cshtml
+++ b/Classroom/Views/GroupC/Create.cshtml
@@ -4,11 +4,28 @@
 
 @if ((bool)ViewData["joined"] != false)
 {
-<form action="~/GroupC/CreateConfirm" method="post">
-    <span>Name:</span><input type="text" name="name" /><br />
-    <span>Description:</span><input type="text" name="description" /><br />
-    <span>Password:</span><input type="password" name="password" /><br />
-    <input type="submit" />
+
+<form class="decor" action="~/GroupC/CreateConfirm" method="post">
+    <div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner centerText">
+        <h3 style="text-align: center;">Створення групи</h3>
+        <br />
+        <label>Name</label>
+        <input type="text" name="name" placeholder="name"/>
+
+        <label>Description</label>
+        <input type="text" name="description" placeholder="description" />
+
+
+        <label>Password</label>
+        <input type="password" name="password" placeholder="password"/>
+
+
+        <input type="submit" value="Ввійти">
+
+    </div>
 </form>
 }
 else
