--- a/Classroom/Views/Index/CreateTask.cshtml
+++ b/Classroom/Views/Index/CreateTask.cshtml
@@ -2,14 +2,29 @@
 @{
     Layout = "_Layout";
 }
-<form action="~/Index/CreateTaskSave" method="post" enctype="multipart/form-data">
-    <input type="hidden" name="id" value="@Model.idGroup" />
-    Title: <input type="text" name="title" /><br />
-    Description: <input type="text" name="description" /><br />
-    File: <input type="file" name="uploadedFile" /><br />
-    Type: <select name="type">
-        <option value="task">task</option>
-        <option value="message">message</option>
-    </select>
-    <input type="submit"/>
+
+
+<form class="decor" action="~/Index/CreateTaskSave" method="post" enctype="multipart/form-data">
+    <div class="form-left-decoration"></div>
+    <div class="form-right-decoration"></div>
+    <div class="circle"></div>
+    <div class="form-inner centerText">
+        <input type="hidden" name="id" value="@Model.idGroup" />
+        <h3 style="text-align: center;">Створити завдання</h3>
+        <br />
+        <label>Title</label>
+        <input type="text" name="title" placeholder="title" />
+
+        <label>Description</label>
+        <input type="text" name="description" placeholder="description" />
+
+        <label>Description</label>
+        <input type="text" name="description" placeholder="description" />
+
+        <label>File</label>
+        <input type="file" name="uploadedFile" />
+
+        <input type="submit" value="Створити">
+
+    </div>
 </form>
