--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -28,12 +28,13 @@
 <div class="anderMenuLine"></div>
 
 @if ((bool)ViewData["joined"] != false)
-{
+{   
+<div class="whiteBackground">
     <h3 class="centerText">My Groups</h3>
 
     @foreach (Classroom.Group item in Model.listMyGroups)
     {
-        <div class="flex menuBlock">
+        <div class="spaceBetween flex menuBlock">
 
             <div class=" flex leftMenuBlock">
                 <div class="margin-left13px">
@@ -55,6 +56,7 @@
     <div class="rightMenuBlock button margin-left13px">
         <a class="linksStyle" href="~/GroupC/Create">Create group</a>
     </div>
+</div>
         <hr />
 
 
