--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -7,35 +7,54 @@
 {
     @if (!(bool)ViewData["owned"])
     {
-        <h4><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Peoples</a></h4>
-        <table>
+        <div class="whiteSpace">
+            <h4 class="centerText"><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Завдання</a></h4>
             @for (int i = 0; i < Model.listTasks.Count; i++)
             {
-                <tr>
-                    <td>@Model.listTasks[i].Id</td>
-                    <td>@Model.listTasks[i].Name</td>
-                    <td>@Model.listTasks[i].Description</td>
-                    <td><a href="~/Index/Task/@Model.listTasks[i].Id">link</a></td>
-                </tr>
+                <div class="flex spaceBetween menuBlock">
+                    <div class=" flex leftMenuBlock">
+                        <div class="margin-right13px margin-left30px">
+                            <span>@Model.listTasks[i].Id </span>
+                            <span>@Model.listTasks[i].Name</span>
+                            <span>@Model.listTasks[i].Description</span>
+                        </div>
+                    </div>
+                    <div class="rightMenuBlock button margin-right30px">
+                        <a class="linksStyle" href="~/Index/Task/@Model.listTasks[i].Id">link</a>
+                    </div>
+                </div>
             }
-        </table>
+        </div>
     }
     else
     {
-        <h4><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Peoples</a></h4>
-        <table>
+        <div class="whiteSpace">
+            <h4 class="centerText"><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Завдання</a></h4>
+
             @for (int i = 0; i < Model.listTasks.Count; i++)
             {
-            <tr>
-                <td>@Model.listTasks[i].Id</td>
-                <td>@Model.listTasks[i].Name</td>
-                <td>@Model.listTasks[i].Description</td>
-                <td><a href="~/Index/Task/@Model.listTasks[i].Id">link</a></td>
-                <td><a href="~/Index/DeleteTask/@Model.listTasks[i].Id">delete</a></td>
-            </tr>
+                <div class="flex spaceBetween menuBlock">
+                    <div class=" flex leftMenuBlock">
+                        <div class="margin-left30px">
+                            <a class="deleteButton" href="~/Index/DeleteTask/@Model.listTasks[i].Id">
+                                <span class="material-icons">delete</span>
+                            </a>
+                        </div>
+                        <div class="margin-right13px margin-left30px">
+                            <span>@Model.listTasks[i].Id </span>
+                            <span>@Model.listTasks[i].Name</span>
+                            <span>@Model.listTasks[i].Description</span>
+                        </div>
+                    </div>
+                    <div class="rightMenuBlock button margin-right30px">
+                        <a class="linksStyle" href="~/Index/Task/@Model.listTasks[i].Id">link</a>
+                    </div>
+                </div>
             }
-        </table>
-        <a href="~/Index/CreateTask/@ViewData["currentId"]">Create new</a>
+            <div class="downButton">
+                <a href="~/Index/CreateTask/@ViewData["currentId"]">Створити новий</a>
+            </div>
+        </div>
     }
 }
 else
