--- a/Classroom/Views/Index/Index.cshtml
+++ b/Classroom/Views/Index/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="flex spaceBetween menuBlock">
     <div class="leftMenuBlock">
         <ul class=" flex button2 menuUlStyle">
-            <li class="menuLiStyle menuText"><a class="aStyle" href=""><span class="yellowText">Me</span><span class="orangeText">nu</span></a></li>
+            <li class="menuLiStyle menuText"><a class="aStyle" href="~/"><span class="yellowText">Me</span><span class="orangeText">nu</span></a></li>
         </ul>
     </div>
     <div class="rightMenuBlock">
