--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -8,9 +8,13 @@
     @if (!(bool)ViewData["owned"])
     {
         <div class="whiteSpace">
-            <h4 class="centerText"><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Завдання</a></h4>
+            <h4 class="centerText">Завдання</h4>
+
             @for (int i = 0; i < Model.listTasks.Count; i++)
             {
+                <div class="rightMenuBlock button margin-right30px">
+                    <a class="linksStyle" href="~/Index/PeopleInGroup/@ViewData["currentId"]">Члени групи></a>
+                </div>
                 <div class="flex spaceBetween menuBlock">
                     <div class=" flex leftMenuBlock">
                         <div class="margin-right13px margin-left30px">
@@ -29,11 +33,14 @@
     else
     {
         <div class="whiteSpace">
-            <h4 class="centerText"><a href="~/Index/PeopleInGroup/@ViewData["currentId"]">Завдання</a></h4>
 
+            <h4 class="centerText">Завдання</h4>
             @for (int i = 0; i < Model.listTasks.Count; i++)
             {
                 <div class="flex spaceBetween menuBlock">
+                    <div class="rightMenuBlock button margin-right30px">
+                        <a class="linksStyle" href="~/Index/PeopleInGroup/@ViewData["currentId"]">Члени групи></a>
+                    </div>
                     <div class=" flex leftMenuBlock">
                         <div class="margin-left30px">
                             <a class="deleteButton" href="~/Index/DeleteTask/@Model.listTasks[i].Id">
@@ -52,7 +59,7 @@
                 </div>
             }
             <div class="downButton">
-                <a href="~/Index/CreateTask/@ViewData["currentId"]">Створити новий</a>
+                <a class="linksStyle" href="~/Index/CreateTask/@ViewData["currentId"]">Створити новий</a>
             </div>
         </div>
     }
