--- a/Classroom/Views/Index/TasksInGroup.cshtml
+++ b/Classroom/Views/Index/TasksInGroup.cshtml
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div class="rightMenuBlock button margin-right30px">
-                        <a class="linksStyle" href="~/Index/Task/@Model.listTasks[i].Id">link</a>
+                        <a class="linksStyle" href="~/Index/Task/@Model.listTasks[i].Id">До завдання</a>
                     </div>
                 </div>
             }
@@ -54,12 +54,12 @@
                         </div>
                     </div>
                     <div class="rightMenuBlock button margin-right30px">
-                        <a class="linksStyle" href="~/Index/Task/@Model.listTasks[i].Id">link</a>
+                        <a class="linksStyle" href="~/Index/Task/@Model.listTasks[i].Id">До завдання</a>
                     </div>
                 </div>
             }
             <div class="downButton">
-                <a class="linksStyle" href="~/Index/CreateTask/@ViewData["currentId"]">Створити новий</a>
+                <a class="linksStyle" href="~/Index/CreateTask/@ViewData["currentId"]">Створити нове</a>
             </div>
         </div>
     }
